--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.20",
     "sass-loader": "^8.0.2",
+    "vee-validate": "^3.2.1",
     "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {}
