--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.9.3",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "nuxt": "^2.11.0",
