--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/device": "^1.2.7",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "dotenv": "^8.2.0",
+    "epic-spinners": "^1.1.0",
     "node-sass": "^4.13.0",
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.20",
