--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "dotenv": "^8.2.0",
     "epic-spinners": "^1.1.0",
+    "howler": "^2.1.3",
     "node-sass": "^4.13.1",
     "nuxt": "^2.11.0",
     "nuxt-buefy": "^0.3.24",
