♻アプリ名： 「こんこん♪」 => 「まねがる!」

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comcon",
+  "name": "manegaru",
   "version": "1.0.0",
   "description": "ボイロたちと過ごすドタバタ日常系タスクアプリ!",
   "author": "Iroha71",
